Changed visuals of guesses column.

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acronymle</title>
   <link rel="stylesheet" href="/acronymle.css">
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Fredoka+One&family=Baloo+2:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="game-wrapper">
     <div class="container">
       <h1>Acronymle</h1>
+
+
+      <!-- Acronym display (e.g., O.T.W.) -->
+      <div id="acronym-display" class="acronym-display" aria-label="Acronym"></div>
 
       <!-- Guess indicators: one box per allowed incorrect guess -->
       <div id="guess-indicators" class="indicators" aria-hidden="true">
