Added a toast message to indicate when a input is a duplicate, and blocks the input.

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Acronymle</title>
   <link rel="stylesheet" href="/acronymle.css">
+  <link rel="stylesheet" href="/toast.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Fredoka+One&family=Baloo+2:wght@700&display=swap"
     rel="stylesheet">
