Added hint button, allow for input of up to 12 characters, and removed acronyms with words longer than 12 characters.

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -34,17 +34,21 @@
         <!-- Three input rows: each word in the acronym -->
         <div id="input-rows">
           <div id="input-area-0" class="input-area input-row">
-            <input id="guess-input-0" class="guess-input" type="text" maxlength="10" autocomplete="off"
+            <input id="guess-input-0" class="guess-input" type="text" maxlength="12" autocomplete="off"
               inputmode="latin" />
           </div>
           <div id="input-area-1" class="input-area input-row">
-            <input id="guess-input-1" class="guess-input" type="text" maxlength="10" autocomplete="off"
+            <input id="guess-input-1" class="guess-input" type="text" maxlength="12" autocomplete="off"
               inputmode="latin" />
           </div>
           <div id="input-area-2" class="input-area input-row">
-            <input id="guess-input-2" class="guess-input" type="text" maxlength="10" autocomplete="off"
+            <input id="guess-input-2" class="guess-input" type="text" maxlength="12" autocomplete="off"
               inputmode="latin" />
           </div>
+        </div>
+        <!-- Hint Button -->
+        <div class="hint-container">
+          <button id="hint-btn" class="hint-btn">Hint</button>
         </div>
       </div>
 
