Added categories: A grouping of acronyms that fall under a more general description. This category is displayed giving the user more direction for their guesses.

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -21,6 +21,7 @@
 
         <!-- Acronym display (e.g., O.T.W.) -->
         <div id="acronym-display" class="acronym-display" aria-label="Acronym"></div>
+        <div id="category-display" class="category-display" aria-label="Category"></div>
 
         <!-- Guess indicators: one box per allowed incorrect guess -->
         <div id="guess-indicators" class="indicators" aria-hidden="true">
