Added icon for hints, added animations for color on input boxes, and removed broken acronym MSG or MG

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -47,9 +47,10 @@
               inputmode="latin" />
           </div>
         </div>
-        <!-- Hint Button -->
-        <div class="hint-container">
+        <!-- Hint Section -->
+        <div class="hint-section">
           <button id="hint-btn" class="hint-btn">Hint</button>
+          <div id="hint-icons" class="hint-icons"></div>
         </div>
       </div>
 
