Added view board button to view the board after game has ended

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -76,9 +76,13 @@
         <span class="solution-label">Solution:</span>
         <span id="modal-solution" class="solution-text">ON THE WAY</span>
       </div>
-      <button id="play-again-btn" class="play-again-btn">Play Again</button>
+      <div class="modal-buttons">
+        <button id="view-board-btn" class="view-board-btn">View Board</button>
+        <button id="play-again-btn" class="play-again-btn">Play Again</button>
+      </div>
     </div>
   </div>
+  <button id="show-results-btn" class="show-results-btn">Show Results</button>
 
   <!-- Game logic is loaded from an external file for clarity -->
   <script src="/acronymle.js" defer></script>
