Added nav bar with yellow color and title. No other actions yet.

--- a/frontend/public/acronymle.html
+++ b/frontend/public/acronymle.html
@@ -16,7 +16,13 @@
   <div class="game-wrapper">
     <div class="main-content-row">
       <div class="container">
-        <h1>Acronymle</h1>
+        <header class="navbar">
+          <div class="navbar-container">
+            <div class="nav-left"></div>
+            <h1 class="logo">Acronymle</h1>
+            <div class="nav-right"></div>
+          </div>
+        </header>
 
 
         <!-- Acronym display (e.g., O.T.W.) -->
